# finite-time-queue-peak-laws

./: .gitignore  CODE_RELEASE_CHECKLIST.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  FAST_PATH.md  LICENSE  README.md  REPRODUCE.md  main.py  pyproject.toml
configs/: smoke_bipartite_matching.json  smoke_gg1.json  smoke_iqs.json  smoke_parallel_server.json  two_phase_bipartite_asym.json  two_phase_bipartite_sym.json  two_phase_gg1.json  two_phase_iqs.json  two_phase_iqs_0.0001.json  two_phase_iqs_0.0005.json  two_phase_iqs_0.001.json  two_phase_iqs_0.005.json  two_phase_parallel_server.json  two_phase_parallel_server_0.0001.json  two_phase_parallel_server_0.0005.json  two_phase_parallel_server_0.001.json  two_phase_parallel_server_0.005.json  two_phase_parallel_server_1.json
notebooks/: 2q.ipynb  CRP_in.ipynb  README.md
scripts/: make_submission_archive.py  plot_aggregate.py  plot_logscale.py  plot_two_phase_bipartite.py  reproduce_all.sh  reproduce_fig_appendix.sh  reproduce_fig_main.sh
src/qpeak/: __init__.py  cli.py  compose.py  config_io.py  registries.py  types.py
src/qpeak/arrivals/: __init__.py  bernoulli_bipartite.py  bernoulli_customer.py  bernoulli_gg1.py  iid_bernoulli.py
src/qpeak/models/: __init__.py  bipartite_matching.py  gg1.py  iqs.py  parallel_server.py
src/qpeak/policies/: __init__.py  maxweight.py
src/qpeak/recording/: __init__.py  paths.py
src/qpeak/service_times/: __init__.py  base.py  geometric.py
src/qpeak/simulation/: __init__.py  engine.py  fast_parallel_server.cpp  fast_parallel_server.py
