[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpeak"
version = "0.1.0"
description = "Config-driven queueing experiments for peak queue growth."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
